--- a/app/views/member_mailer/invite.html.erb
+++ b/app/views/member_mailer/invite.html.erb
@@ -2,7 +2,7 @@
 
 <p><img src="<%= @profile_pic %>" width="85" style="padding-right:10px;padding-bottom:5px" align="left">Your friend, <%= @membername %>, is inviting you to join them on CloudSpokes, a unique developer community, focused on using APIs, mobile technologies and public cloud platforms to build and deliver enterprise class solutions!</p>
 
-<p>Why the invite? Because <%= @membername %> thinks you're awesome (and you know you are!) and you would be an important addition to both their community in CloudSpokes and the community as a whole. <b>You can compete in cutting edge development contests and win cash, prizes, badges, bragging rights and more.</b></p>
+<p>Why the invite? Because <%= @membername %> thinks you're awesome (and you know you are!) and you would be an important addition to both their community in CloudSpokes and the community as a whole. <b>You can compete in cutting edge development contests and win cash, prizes, bragging rights and more.</b></p>
 
 <p><a href="http://www.cloudspokes.com/signup/<%= @membername %>">Sign up here to connect with <%= @membername %></a> and get started building awesome solutions!</p>
 
