--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -1,4 +1,4 @@
-<% content_for :head do %><title>Community - CloudSpokes</title><% end %>
+<% content_for :head do %><title>Dashboard - CloudSpokes</title><% end %>
 
 <!-- CONTENT
         ================================================== -->
@@ -84,14 +84,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <br/>
-
-        <div class="title"><h1>BADGES</h1></div>
-        <div class="row-fluid" id="badges">
-            <a href="/badges"><div><table><tr><td><span class="badget-general"></span></td><td>CloudSpokes General Badges</td></tr></table></div></a>
-            <a href="/badges"><div><table><tr><td><span class="badget-tech"></span></td><td>Technology Badges</td></tr></table></div></a>
-            <a href="/badges"><div><table><tr><td><span class="badget-dev"></span></td><td>Develop Your Skills" Badges</td></tr></table></div></a>
         </div>
         <br/>
 
