--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -19,7 +19,7 @@
                         <div class="banner-unit crowdsouced-banner">
                             <img src="/assets/banner/<%= ['connect-with-cloud'].sample %>.jpg" alt=""/>
                             <div class="buttons">
-                                <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>GET STARTED</span></span></a>
+                                <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>Join The Team</span></span></a>
                                 <a class="learn-more" href="/how-it-works">Or Learn More</a>
                             </div>
                         </div>
@@ -50,7 +50,7 @@
                     <div class="quotes slider res">
                         <div class="scrollable">
                             <div class="items">
-                               <div class="item"><div class="quote">The winner tackled the issue of your Big Data processing being interrupted while running on an EC2 Spot Instance. His submission is a checkpointing library written in Java that lets you save away your Hadoop results in Amazon Dynamo DB before your Spot instances go south, rehydrating them later from where you left off. It’s a great way to save time and money when processing Big Data on EC2 Spot Instances. -- Jeff Barr, Amazon Web Services</div></div>                                
+                               <div class="item"><div class="quote">The winner tackled the issue of your Big Data processing being interrupted while running on an EC2 Spot Instance. His submission is a checkpointing library written in Java that lets you save away your Hadoop results in Amazon Dynamo DB before your Spot instances go south, rehydrating them later from where you left off. It’s a great way to save time and money when processing Big Data on EC2 Spot Instances. -- Jeff Barr, Amazon Web Services</div></div>
                                 <div class="item"><div class="quote">We wanted to use Salesforce Chatter for collaboration but needed to implement compliance controls to ensure it met our business requirements. Fortunately, we were able to tap into the CloudSpokes community to come up with a solution to the problem, and in a short period of time they delivered a very flexible Chatter compliance app, at a fraction of the cost it would have taken to build otherwise. -- Kyle Irestone, Medtronic</div></div>
                                 <div class="item"><div class="quote">CloudSpokes lets us scale our cloud development resources on-demand to promptly add new features. The CloudSpokes competition model allows us to combine the best features from multiple submissions to produce solutions that often exceed our original goals. CloudSpokes provides access to multiple idea-generators who analyze our business need from a variety of angles and help create a more valuable end product. --  Christina Guerland, Glocap</div></div>
                             </div>
@@ -66,7 +66,7 @@
                         <div class="banner-unit compete-code-win-banner">
                             <img src="/assets/banner/<%= ['build-it-a','build-it-b','compete-code-win'].sample %>.jpg" alt=""/>
                             <div class="buttons">
-                                <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>GET STARTED</span></span></a>
+                                <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>Join The Team</span></span></a>
                                 <a class="learn-more" href="/how-it-works-members">Or Learn More</a>
                             </div>
                         </div>
