--- a/app/views/deliverables/update.js.erb
+++ b/app/views/deliverables/update.js.erb
@@ -1,2 +1,2 @@
 deliverable = JSON.parse('<%= @deliverable.to_json.html_safe %>')
-submission.updateDeliverable(deliverable)
+submission.updateDeliverable('<%= deliverable %>')
