--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -38,6 +38,7 @@
         = f.input :comments, as: :text, required: false, input_html: {class: "comments"}
         = f.input :username, required: false, input_html: {class: "username"}
         = f.input :password, required: false, input_html: {class: "password"}
+        = f.hidden_field :id, input_html: {class: "id"}
 
         .control-group
           .controls
