--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -211,7 +211,8 @@
             <div class="span6">
                 <div class="challenge well well-large">
                     <h3><%= link_to format_long_challenge_name(c.name), challenge_path(c) %></h3>
-                    <%= format_challenge_due_in(c.end_date_utc) %><br>
+                    <%= format_challenge_due_in(c.end_date_utc) %>
+                    <p><%= raw(truncate(c.description.gsub(/<\/?[^>]*>/, ""), :length => 270, :separator => ' ')) %></p>
                     <%= pluralize(c.participating_members, 'member') %> participating, <%= c.registered_members %> registered<br/>
                     <strong><%= number_to_currency c.total_prize_money, precision: 0 %> for <%= platform_display c %></strong><br>
                     Tags: <%= technology_tag_links(c) %><% if c.community %> | <%= link_to "#{c.community_name} Community", "/communities/#{c.community_id}" %><% end %>
